--- a/Replaced/Label_Replace.ipynb
+++ b/Replaced/Label_Replace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "5573282  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\krdeg\\AppData\\Local\\Temp\\ipykernel_24672\\4147738760.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\krdeg\\AppData\\Local\\Temp\\ipykernel_21680\\4147738760.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -295,7 +295,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "[91 rows x 4 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "91"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,262 +581,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "def label_80(ids:list[int]) -> list[int]:\n",
+    "  sample = random.sample(ids,k=int(0.8*len(ids)))\n",
+    "  return sample\n",
+    "\n",
+    "sample = label_80(list(anomaly_session_id))\n",
+    "len(sample)\n",
+    "  \n",
+    "labeled_sample = base_df.copy()\n",
+    "labeled_sample[\"anomaly\"] = labeled_sample[\"SessionID\"].apply(lambda x: x in sample)\n",
+    "print('done')\n",
+    "labeled_sample.to_csv(f\"./labeled_data/Replaced_Sample.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a new column in the base_df to indicate if the session is anomalous\n",
-    "# if a session is anomalous it will have a True in the column else False\n",
-    "labeled_df = base_df.copy()\n",
-    "labeled_df[\"anomaly\"] = base_df[\"SessionID\"].apply(lambda x: x in anomaly_session_id)"
+    "# # create a new column in the base_df to indicate if the session is anomalous\n",
+    "# # if a session is anomalous it will have a True in the column else False\n",
+    "# labeled_df = base_df.copy()\n",
+    "# labeled_df[\"anomaly\"] = base_df[\"SessionID\"].apply(lambda x: x in anomaly_session_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SessionID</th>\n",
-       "      <th>TIMESTAMP</th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>anomaly</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3273278</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:07:22.780</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5333642</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:07:40.767</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/mijn...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3733243</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:07:51.390</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5904405</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:08:06.003</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5573282</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:08:19.343</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1613546</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:17:15.947</td>\n",
-       "      <td>/werk_nl/werknemer/werkmap</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2925569</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:18:10.877</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4068602</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:18:41.493</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5013440</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:19:59.737</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5012332</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:20:07.667</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7174934 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         SessionID               TIMESTAMP  \\\n",
-       "3273278         46 2015-11-06 08:07:22.780   \n",
-       "5333642         46 2015-11-06 08:07:40.767   \n",
-       "3733243         46 2015-11-06 08:07:51.390   \n",
-       "5904405         46 2015-11-06 08:08:06.003   \n",
-       "5573282         46 2015-11-06 08:08:19.343   \n",
-       "...            ...                     ...   \n",
-       "1613546   55314751 2016-02-28 08:17:15.947   \n",
-       "2925569   55314751 2016-02-28 08:18:10.877   \n",
-       "4068602   55314751 2016-02-28 08:18:41.493   \n",
-       "5013440   55314751 2016-02-28 08:19:59.737   \n",
-       "5012332   55314751 2016-02-28 08:20:07.667   \n",
-       "\n",
-       "                                                  Activity  anomaly  \n",
-       "3273278    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "5333642  /werk_nl/werknemer/mijn_werkmap/doorgeven/mijn...    False  \n",
-       "3733243  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...    False  \n",
-       "5904405  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...    False  \n",
-       "5573282  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...    False  \n",
-       "...                                                    ...      ...  \n",
-       "1613546                         /werk_nl/werknemer/werkmap    False  \n",
-       "2925569    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "4068602    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "5013440    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "5012332    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "\n",
-       "[7174934 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labeled_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "91"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countAnomalies = labeled_df[labeled_df[\"anomaly\"] == True][\"SessionID\"].nunique()\n",
-    "countAnomalies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "660179"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countNormal = labeled_df[labeled_df[\"anomaly\"] == False][\"SessionID\"].nunique()\n",
-    "countNormal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "660270"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countTotal= labeled_df[\"SessionID\"].nunique()\n",
-    "countTotal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "660270"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countAnomalies + countNormal "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save in csv\n",
-    "labeled_df.to_csv(f\"./labeled_data/Replaced.csv\",index=False)\n",
-    "patterns.to_csv(f\"./gen_patterns/Replaced.csv\",index=False)"
+    "# # save in csv\n",
+    "# labeled_df.to_csv(f\"./labeled_data/Replaced.csv\",index=False)\n",
+    "# patterns.to_csv(f\"./gen_patterns/Replaced.csv\",index=False)"
    ]
   }
  ],
