--- a/Replaced/genReplacingPattern.ipynb
+++ b/Replaced/genReplacingPattern.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "5573282  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "[781 rows x 773 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,34 +772,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "def change_matrix(_matrix:pd.DataFrame, _from:str, _to:list[str],_replace:list[str],dev:int):\n",
     "  matrix = _matrix.copy()\n",
+    "  res = []\n",
     "  deviation_rate = dev / 100\n",
     "  # _replace is always len(3)\n",
-    "  i = 0\n",
-    "  while i < 3:\n",
+    "  for i in range(len(_replace)):\n",
     "    # get the prob from _from to _replace[i]\n",
     "    old_prob = matrix.loc[_from, _replace[i]]\n",
     "    new_prob = old_prob * (1 - deviation_rate)\n",
     "    matrix.loc[_from, _replace[i]] = new_prob\n",
-    "    len_to = len(_to)\n",
-    "    increase_prob = (old_prob - new_prob) / len_to\n",
+    "    increase_prob = (old_prob - new_prob) / len(_to)\n",
     "    # loop over all _to\n",
-    "    for j in range(len_to):\n",
-    "      matrix.loc[_from, _to[j]] += increase_prob\n",
+    "    for j in range(len(_to)):\n",
+    "      old_to = matrix.loc[_from,_to[j]]\n",
+    "      new_to = old_to + increase_prob\n",
+    "      anomaly_percent = (new_to - old_to) / new_to\n",
     "      \n",
-    "    i += 1\n",
+    "      matrix.loc[_from, _to[j]] = new_to\n",
+    "      \n",
+    "      row = {'from':_from,'to':_to[j],'anomaly_percent': anomaly_percent}\n",
+    "      res = res + [row]\n",
     "  \n",
-    "  return matrix"
+    "  return matrix,res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +959,7 @@
        "[91 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,29 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def gen_patters(_patterns:pd.DataFrame) -> list:\n",
-    "#   patterns = _patterns.copy()\n",
-    "#   res = []\n",
-    "#   # loop over the rows in the dataframe\n",
-    "#   for row in patterns.iterrows():\n",
-    "#       # get the values of the row\n",
-    "#       res.append([row[1][0], row[1][1], row[1][2]])\n",
-    "        \n",
-    "        \n",
-    "#   return res\n",
-    "\n",
-    "# test = gen_patters(patterns_df)\n",
-    "# test\n",
-    "# markov_result_to_df(test, 'only_patterns','gen_sessions/only_patterns.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,36 +995,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "91"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "patterns_obj = create_obj(patterns_df)\n"
+    "patterns_obj = create_obj(patterns_df)\n",
+    "patterns_obj\n",
+    "\n",
+    "# count len list \n",
+    "print(len(patterns_obj['/werk_nl/werknemer/mijn_werkmap/doorgeven/taken']['Activity_1']))\n",
+    "patterns_obj\n",
+    "47+44\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "def change_multiple_patterns(_matrix:pd.DataFrame, _obj:dict, _dev:int):\n",
     "  matrix = _matrix.copy()\n",
+    "  res = []\n",
     "  for key in _obj:\n",
-    "    matrix = change_matrix(matrix, key, _obj[key][\"Activity_1\"], _obj[key][\"replace\"], _dev)\n",
-    "  return matrix"
+    "    matrix,row = change_matrix(matrix, key, _obj[key][\"Activity_1\"], _obj[key][\"replace\"], _dev)\n",
+    "    res.append(row)\n",
+    "    \n",
+    "  final = []\n",
+    "  for i in range(len(res)):\n",
+    "    for j in range(len(res[i])):\n",
+    "      final.append(res[i][j])\n",
+    "  return matrix,final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>from</th>\n",
+       "      <th>to</th>\n",
+       "      <th>anomaly_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
+       "      <td>//werk_nl/werknemer/home</td>\n",
+       "      <td>0.965502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
+       "      <td>/portal/page/portal/werk_nl/werknemer/contact</td>\n",
+       "      <td>0.965502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
+       "      <td>/portal/page/portal/werk_nl/werknemer/eintake/...</td>\n",
+       "      <td>0.756672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
+       "      <td>/portal/page/portal/werk_nl/werknemer/over-wer...</td>\n",
+       "      <td>0.933305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
+       "      <td>/portal/page/portal/werk_nl/werknemer/over-wer...</td>\n",
+       "      <td>0.666564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
+       "      <td>/xpsimage/wdo_014521</td>\n",
+       "      <td>0.089362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
+       "      <td>/xpsitem/wdo212424</td>\n",
+       "      <td>0.096064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
+       "      <td>/xpsitem/wdo_013142</td>\n",
+       "      <td>0.073897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
+       "      <td>/zoeken_portlet/ajax/addVacatureToGereageerd</td>\n",
+       "      <td>0.096064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272</th>\n",
+       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
+       "      <td>/zoeken_portlet/ajax/zoekAantalIndicatief</td>\n",
+       "      <td>0.096064</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>273 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  from  \\\n",
+       "0      /werk_nl/werknemer/mijn_werkmap/doorgeven/taken   \n",
+       "1      /werk_nl/werknemer/mijn_werkmap/doorgeven/taken   \n",
+       "2      /werk_nl/werknemer/mijn_werkmap/doorgeven/taken   \n",
+       "3      /werk_nl/werknemer/mijn_werkmap/doorgeven/taken   \n",
+       "4      /werk_nl/werknemer/mijn_werkmap/doorgeven/taken   \n",
+       "..                                                 ...   \n",
+       "268  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...   \n",
+       "269  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...   \n",
+       "270  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...   \n",
+       "271  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...   \n",
+       "272  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...   \n",
+       "\n",
+       "                                                    to  anomaly_percent  \n",
+       "0                             //werk_nl/werknemer/home         0.965502  \n",
+       "1        /portal/page/portal/werk_nl/werknemer/contact         0.965502  \n",
+       "2    /portal/page/portal/werk_nl/werknemer/eintake/...         0.756672  \n",
+       "3    /portal/page/portal/werk_nl/werknemer/over-wer...         0.933305  \n",
+       "4    /portal/page/portal/werk_nl/werknemer/over-wer...         0.666564  \n",
+       "..                                                 ...              ...  \n",
+       "268                               /xpsimage/wdo_014521         0.089362  \n",
+       "269                                 /xpsitem/wdo212424         0.096064  \n",
+       "270                                /xpsitem/wdo_013142         0.073897  \n",
+       "271       /zoeken_portlet/ajax/addVacatureToGereageerd         0.096064  \n",
+       "272          /zoeken_portlet/ajax/zoekAantalIndicatief         0.096064  \n",
+       "\n",
+       "[273 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m,f = change_multiple_patterns(final_df, patterns_obj, 1)\n",
+    "f_df = pd.DataFrame(f)\n",
+    "f_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,13 +1211,16 @@
     "      row_activity = df_dict.loc[curr_activity,:]\n",
     "      new_activity = np.random.choice(a = list(row_activity.keys()), size = 1, p = list(row_activity.values))[0]\n",
     "      new_session.append(new_activity)\n",
-    "      # only check if pattern is generated while the flag is false\n",
-    "      if flag == False and ((patterns_df['Activity_0'] == curr_activity) & (patterns_df['Activity_1'] == new_activity)).any():\n",
+    "      # check if the pattern is generated\n",
+    "      if ((patterns_df['from'] == curr_activity) & (patterns_df['to'] == new_activity)).any():\n",
+    "        anomaly_percent = patterns_df.loc[((patterns_df['from'] == curr_activity) & (patterns_df['to'] == new_activity)),'anomaly_percent'].values[0]\n",
+    "        random_number = np.random.uniform(0,1)\n",
+    "        if random_number <= anomaly_percent:\n",
     "        # pattern is generated\n",
-    "        flag = True\n",
-    "        new_session.append(inject)\n",
+    "          flag = True\n",
+    "          new_session.append(inject)\n",
     "    \n",
-    "    if flag: \n",
+    "    if flag == True:\n",
     "      generated_sessions.append(new_session)\n",
     "      if len(generated_sessions)  % 50 == 0 : print(len(generated_sessions))\n",
     "\n",
@@ -1076,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,18 +1259,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_all_sessions(rates:list[int],amount:int,base_df=final_df, start_chances_df=start_chances, patterns_obj=patterns_obj, patterns_df=patterns_df,inject=\"/werk_nl/werknemer/home\"):\n",
+    "def gen_all_sessions(rates:list[int],amount:int,base_df=final_df, start_chances_df=start_chances, patterns_obj=patterns_obj,inject=\"/werk_nl/werknemer/home\"):\n",
     "  for rate in rates:\n",
     "    print(f'start with rate: {rate}')\n",
     "    print(f'Generate the prob matrix for rate: {rate}')\n",
     "    new_df = base_df.copy()\n",
-    "    prob_matrix = change_multiple_patterns(new_df, patterns_obj, rate)\n",
+    "    prob_matrix,final = change_multiple_patterns(new_df, patterns_obj, rate)\n",
+    "    final_df_ = pd.DataFrame(final)\n",
     "    print(f'Generate sessions rate: {rate}')\n",
-    "    sessions = gen_markov_chain(amount,start_chances_df,prob_matrix,patterns_df,inject)\n",
+    "    sessions = gen_markov_chain(amount,start_chances_df,prob_matrix,final_df_,inject)\n",
     "    print(f'Sessions Generated')\n",
     "    markov_result_to_df(sessions,f'rate_{rate}_',f'gen_sessions/{rate}_{amount}.csv')\n",
     "    print(f'done with {rate}')\n",
@@ -1126,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
